最大最小の表記揺れ修正

--- a/view_refinement/user_view/top_view/16_会員登録画面.md
+++ b/view_refinement/user_view/top_view/16_会員登録画面.md
@@ -25,9 +25,9 @@ Confidential SaunaTravel
 | 入力項目 | 必須チェック                   | 文字数チェック   | 利用可能文字種チェック| 必要文字種チェック| 相関チェック | 一意性チェック |
 | ------ | ------------------------------ | --------------- | ------- | ------- | ------- | ------- |
 | メールアドレス入力ボックス  | 　必須   |  local部: 1~64文字 domain部: 3~253文字 全体の文字数: 5~254文字   | local部: 英字(大文字・小文字)・数字・記号(! # $ % & ' * + - / = ? ^ _ ` { \| } ~ .) domain部: 英字(大文字・小文字)・数字・記号 (- .)| @を含むか | なし | DBに同一のメールアドレスが存在しないか |
-| メールアドレス再入力ボックス  | 　必須   |  なし   | 5~254文字 |  | メールアドレス入力ボックス欄と一致するか  | なし |
-| パスワード入力ボックス  | 　必須   |    最小:12 最大:∞   | 英字(大文字・小文字)・数字・記号(~ ! @ # $ % ^ & * ( ) _ + '} {' [ ] \ ? : " ; ' , . / = -) | 利用可能文字種から2種類以上 | なし | なし |
-| パスワード再入力ボックス  | 　必須   |   最小:12 最大:∞    | 英字(大文字・小文字)・数字・記号(~ ! @ # $ % ^ & * ( ) _ + '} {' [ ] \ ? : " ; ' , . / = -) | 利用可能文字種から2種類以上 | パスワード入力ボックス欄と一致するか | なし |
+| メールアドレス再入力ボックス  | 　必須   |  5~254文字   | なし | なし | メールアドレス入力ボックス欄と一致するか  | なし |
+| パスワード入力ボックス  | 　必須   |    12 ~ ∞   | 英字(大文字・小文字)・数字・記号(~ ! @ # $ % ^ & * ( ) _ + '} {' [ ] \ ? : " ; ' , . / = -) | 利用可能文字種から2種類以上 | なし | なし |
+| パスワード再入力ボックス  | 　必須   |   12 ~ ∞   | なし | なし | パスワード入力ボックス欄と一致するか | なし |
 
 
 #### 1.2.2 ビジネスルール
