トップ画面に関するタグの付与

--- a/view_refinement/user_view/top_view/02_ログイン画面.md
+++ b/view_refinement/user_view/top_view/02_ログイン画面.md
@@ -7,6 +7,7 @@ Confidential SaunaTravel
 |更新日|対応者|内容|
 |-|-|-|
 | 2024/08/12 | 原 | 新規作成 |
+| 2024/08/17 | 原 | バリデーション引っかかった場合を追記 |
 
 ***
 
@@ -32,10 +33,11 @@ Confidential SaunaTravel
 
 #### 1.2.1 バリデーションチェック
 
-| 入力項目 | 必須チェック                   | 文字数チェック   | 文字種チェック|
-| ------ | ------------------------------ | --------------- | ------- |
-| メールアドレス入力ボックス  | 　必須   |    なし   | 〇 半角、記号文字　× 特殊文字、全角 |
-| パスワード入力ボックス  | 　必須   |    なし   | 〇 半角、記号文字　全角　× 特殊文字、全角 |
+
+| 入力項目 | 必須チェック                   | 文字数チェック   | 利用可能文字種チェック| 必要文字種チェック |  相関チェック | 一意性チェック | マスタチェック |
+| ------ | ------------------------------ | --------------- | ------- | -------| ------- | ------- | ------- |
+| メールアドレス入力ボックス  | 　必須   |  なし   | なし| なし| なし  | なし | 一致する物があるか照合する |
+| パスワード入力ボックス  | 　必須   | なし  | なし | なし |なし | なし | 一致するか照合する |
 
 
 
@@ -53,6 +55,10 @@ Confidential SaunaTravel
       - 文字種チェックの条件を満たしているか
       -  メールアドレスが存在するものか
       -  パスワードが一致するか
+   - バリデーションにひっかかった場合
+      - 該当箇所を赤枠で囲う
+      - チェック理由を入力ボックス以下に表示する
+      - パスワードのみ全部クリアする 
    -  ログイン情報が一致したらホーム画面に遷移する
 
 
@@ -60,11 +66,6 @@ Confidential SaunaTravel
 
 <a id="anchor2"></a>
 
-- パスワードを一時的に表示するアイコンは作成する？
-- メールアドレスを一気に削除するようなアイコンは設ける？
-- バリデーションチェック引っかかった場合のダイアログか、入力ボックス
-下に、赤文字で文言を出すか
-- バリデーション引っかかった場合は文字列を入力欄をクリアするか、そのまま残すか
 
 ## 2 パスワード再設定
 ![alt text](../image/login.png)
