--- a/view_refinement/user_view/top_view/10_1_会員情報変更箇所入力画面(メールアドレス).md
+++ b/view_refinement/user_view/top_view/10_1_会員情報変更箇所入力画面(メールアドレス).md
@@ -12,6 +12,10 @@ Confidential SaunaTravel
 ## 目次
 #### [1 メールアドレス再設定](#anchor1)
 
+<a id="anchor1"></a>
+
+## 1 メールアドレス再設定
+
 ### 1.1 概要
 
 メールアドレス再設定に必要な情報を入力する
@@ -20,11 +24,12 @@ Confidential SaunaTravel
 
 #### 1.2.1 バリデーションチェック
 
-| 入力項目 | 必須チェック                   | 文字数チェック   | 利用可能文字種チェック| 必要文字種チェック | 一意性チェック |
-| ------ | ------------------------------ | --------------- | ------- | ------- | ------- |
-| メールアドレス入力ボックス  | 　必須   |  local部: 1~64文字 domain部: 3~253文字 全体の文字数: 5~254文字   | local部: 英字(大文字・小文字)・数字・記号(! # $ % & ' * + - / = ? ^ _ ` { \| } ~ .) domain部: 英字(大文字・小文字)・数字・記号 (- .)| @を含むか  | DBに同一のメールアドレスが存在しないか |
-| パスワード入力ボックス  | 　必須   | 1文字以上  | なし | なし | なし |
-| CAPTCHA入力ボックス  | 　必須   | 1文字以上  | 半角英数字 | なし | なし |
+| 入力項目 | 必須チェック                   | 文字数チェック   | 利用可能文字種チェック| 必要文字種チェック | 相関チェック | 一意性チェック | マスタチェック |
+| ------ | ------------------------------ | --------------- | ------- | ------- | ------- | ------- | ------- |
+| メールアドレス入力ボックス  | 　必須   |  local部: 1~64文字 domain部: 3~253文字 全体の文字数: 5~254文字   | local部: 英字(大文字・小文字)・数字・記号(! # $ % & ' * + - / = ? ^ _ ` { \| } ~ .) domain部: 英字(大文字・小文字)・数字・記号 (- .)| @を含むか  | なし | DBに同一のメールアドレスが存在しないか | なし  |
+| パスワード入力ボックス  | 　必須   | 1文字以上  | なし | なし | なし| なし | なし  |
+| CAPTCHA入力ボックス  | 　必須   | なし  | 半角英数字 | なし | なし| なし | なし  |
+
 
 #### 1.2.2 ビジネスルール
 
