--- a/view_refinement/user_view/top_view/10_2_会員情報変更箇所入力画面(パスワード).md
+++ b/view_refinement/user_view/top_view/10_2_会員情報変更箇所入力画面(パスワード).md
@@ -11,6 +11,10 @@ Confidential SaunaTravel
 ## 目次
 #### [1 パスワード再設定](#anchor1)
 
+<a id="anchor1"></a>
+
+## 1 パスワード再設定
+
 ### 1.1 概要
 
 パスワード再設定に必要な情報を入力する
@@ -19,11 +23,12 @@ Confidential SaunaTravel
 
 #### 1.2.1 バリデーションチェック
 
-| 入力項目 | 必須チェック                   | 文字数チェック   | 利用可能文字種チェック| 必要文字種チェック| 相関チェック | 一意性チェック |
-| ------ | ------------------------------ | --------------- | ------- | ------- | ------- | ------- |
-| パスワード入力ボックス  | 　必須   |    12 ~ ∞   | 英字(大文字・小文字)・数字・記号(~ ! @ # $ % ^ & * ( ) _ + '} {' [ ] \ ? : " ; ' , . / = -) | 利用可能文字種から2種類以上 | なし | 現在のパスワードと一致しないか |
-| パスワード再入力ボックス  | 　必須   |   12 ~ ∞    | なし | なし | パスワード入力ボックス欄と一致するか | なし |
-| CAPTCHA入力ボックス  | 　必須   |   1 ~   | 半角英数字 | なし | なし | なし |
+| 入力項目 | 必須チェック                   | 文字数チェック   | 利用可能文字種チェック| 必要文字種チェック| 相関チェック | 一意性チェック |マスタチェック |
+| ------ | ------------------------------ | --------------- | ------- | ------- | ------- | ------- | ------- |
+| パスワード入力ボックス  | 　必須   |    12 ~ ∞   | 英字(大文字・小文字)・数字・記号(~ ! @ # $ % ^ & * ( ) _ + '} {' [ ] \ ? : " ; ' , . / = -) | 利用可能文字種から2種類以上 | なし | 現在のパスワードと一致しないか | なし |
+| パスワード再入力ボックス  | 　必須   |   12 ~ ∞    | なし | なし | パスワード入力ボックス欄と一致するか | なし | なし |
+| CAPTCHA入力ボックス  | 　必須   |   1 ~   | 半角英数字 | なし | なし | なし | なし |
+
 
 #### 1.2.2 ビジネスルール
 
