--- a/view_refinement/user_view/top_view/03_パスワード再設定画面.md
+++ b/view_refinement/user_view/top_view/03_パスワード再設定画面.md
@@ -30,10 +30,10 @@ Confidential SaunaTravel
 
 #### 1.2.1 バリデーションチェック
 
-| 入力項目 | 必須チェック                   | 文字数チェック   | 文字種チェック|
-| ------ | ------------------------------ | --------------- | ------- |
-| メールアドレス入力ボックス  | 　必須   |    なし   | 〇 半角、記号文字　× 特殊文字、全角 |
-| CAPTCHA入力ボックス  | 　必須   |    なし   | 〇 半角　× 特殊文字、全角、記号文字 |
+| 入力項目 | 必須チェック                   | 文字数チェック   | 利用可能文字種チェック| 必要文字種チェック | 相関チェック | 一意性チェック | マスタチェック |
+| ------ | ------------------------------ | --------------- | ------- | ------- | ------- | ------- |------- |
+| メールアドレス入力ボックス  | 　必須   |  なし   | なし| なし | なし  | なし | 一致する物があるか照合する |
+| CAPTCHA入力ボックス  | 　必須   | なし  | 半角英数字 | なし | なし | なし | なし |
 
 
 #### 1.2.2 ビジネスルール
@@ -54,7 +54,3 @@ Confidential SaunaTravel
    -  メールアドレス、CAPCTHAが一致したらパスワード再設定画面に遷移する 
 
 ### 1.3 疑問点
-
-<a id="anchor2"></a>
-
-- CAPTCHAをリロードしたら入力欄はクリアされる？
