--- a/view_refinement/user_view/top_view/16_会員登録画面.md
+++ b/view_refinement/user_view/top_view/16_会員登録画面.md
@@ -14,6 +14,10 @@ Confidential SaunaTravel
 #### [3 その他入力](#ancho3)
 #### [4 利用規約確認](#ancho4)
 
+<a id="anchor1"></a>
+
+## 1 ログイン時情報入力
+
 ### 1.1 概要
 
 ログイン時に必要な情報を入力する
@@ -22,12 +26,12 @@ Confidential SaunaTravel
 
 #### 1.2.1 バリデーションチェック
 
-| 入力項目 | 必須チェック                   | 文字数チェック   | 利用可能文字種チェック| 必要文字種チェック| 相関チェック | 一意性チェック |
-| ------ | ------------------------------ | --------------- | ------- | ------- | ------- | ------- |
-| メールアドレス入力ボックス  | 　必須   |  local部: 1~64文字 domain部: 3~253文字 全体の文字数: 5~254文字   | local部: 英字(大文字・小文字)・数字・記号(! # $ % & ' * + - / = ? ^ _ ` { \| } ~ .) domain部: 英字(大文字・小文字)・数字・記号 (- .)| @を含むか | なし | DBに同一のメールアドレスが存在しないか |
-| メールアドレス再入力ボックス  | 　必須   |  5~254文字   | なし | なし | メールアドレス入力ボックス欄と一致するか  | なし |
-| パスワード入力ボックス  | 　必須   |    12 ~ ∞   | 英字(大文字・小文字)・数字・記号(~ ! @ # $ % ^ & * ( ) _ + '} {' [ ] \ ? : " ; ' , . / = -) | 利用可能文字種から2種類以上 | なし | なし |
-| パスワード再入力ボックス  | 　必須   |   12 ~ ∞   | なし | なし | パスワード入力ボックス欄と一致するか | なし |
+| 入力項目 | 必須チェック                   | 文字数チェック   | 利用可能文字種チェック| 必要文字種チェック| 相関チェック | 一意性チェック |マスタチェック |
+| ------ | ------------------------------ | --------------- | ------- | ------- | ------- | ------- |------- |
+| メールアドレス入力ボックス  | 　必須   |  local部: 1~64文字 domain部: 3~253文字 全体の文字数: 5~254文字   | local部: 英字(大文字・小文字)・数字・記号(! # $ % & ' * + - / = ? ^ _ ` { \| } ~ .) domain部: 英字(大文字・小文字)・数字・記号 (- .)| @を含むか | なし | DBに同一のメールアドレスが存在しないか |なし |
+| メールアドレス再入力ボックス  | 　必須   |  5~254文字   | なし | なし | メールアドレス入力ボックス欄と一致するか  | なし |なし |
+| パスワード入力ボックス  | 　必須   |    12 ~ ∞   | 英字(大文字・小文字)・数字・記号(~ ! @ # $ % ^ & * ( ) _ + '} {' [ ] \ ? : " ; ' , . / = -) | 利用可能文字種から2種類以上 | なし | なし |なし |
+| パスワード再入力ボックス  | 　必須   |   12 ~ ∞   | なし | なし | パスワード入力ボックス欄と一致するか | なし |なし |
 
 
 #### 1.2.2 ビジネスルール
@@ -47,6 +51,10 @@ Confidential SaunaTravel
 4. **パスワード再入力ボックス**
    - ユーザーのパスワードを入力できる
    - 入力フォームからフォーカスを外した際に、文字数・相関チェックが実行される
+
+<a id="anchor2"></a>
+
+## 2 お客様情報入力
 
 ### 2.1 概要
 
@@ -76,6 +84,10 @@ Confidential SaunaTravel
 2. **氏名入力ボックス**
    - ユーザーの氏名を入力できる
    - 入力フォームからフォーカスを外した際に、文字数・文字種・スペースチェックが実行される
+
+<a id="anchor3"></a>
+
+## 3 その他入力
 
 3. **性別選択ラジオボタン**
    - ユーザーの性別を選択できる
@@ -111,6 +123,10 @@ Confidential SaunaTravel
 1. **電話番号入力ボックス**
    - ユーザーのニックネームを入力できる
    - 入力フォームからフォーカスを外した際に、文字数・文字種チェックが実行される
+
+<a id="anchor4"></a>
+
+## 4 利用規約確認
 
 ### 4.1 概要
 
