共通画面の業務要件定義作成

--- a/view_refinement/user_view/common_view/92_メニュー.md
+++ b/view_refinement/user_view/common_view/92_メニュー.md
@@ -1,4 +1,4 @@
-# 【サウナトラベル検索サイト】業務要件定義書\_トップ画面\_メニュー関連画面
+# 【サウナトラベル検索サイト】業務要件定義書\_共通画面\_メニュー
 
 <div style="text-align: right;">
 Confidential SaunaTravel
@@ -11,7 +11,7 @@ Confidential SaunaTravel
 ***
 
 ## 目次
-#### [1 メニュー関連画面](#anchor1)
+#### [1 メニュー画面](#anchor1)
 
 ***
 
